objects/myV2MOM__Method__c.object
<CustomObject>
    <fields>
        <fullName>myV2MOM__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__V2MOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>V2MOM</label>
        <referenceTo>myV2MOM__V2MOM__c</referenceTo>
        <relationshipLabel>Methods</relationshipLabel>
        <relationshipName>Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Method</label>
    <listViews>
        <fullName>myV2MOM__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Methods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Methods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>